@@ -2,7 +2,7 @@
 <module>
 	<name>packetery</name>
 	<displayName><![CDATA[Packetery]]></displayName>
-	<version><![CDATA[2.0.5]]></version>
+	<version><![CDATA[2.0.6]]></version>
 	<description><![CDATA[Offers your customers the option to choose pick-up point in Packetery network,
             and export orders to Packetery system.]]></description>
 	<author><![CDATA[Packetery, Ltd.]]></author>
