@@ -24,6 +24,8 @@ $_MODULE['<{packetery}prestashop>packetery_a198deb5663dd03a7a184b5c6aa57a1f'] = 
 $_MODULE['<{packetery}prestashop>packetery_2873b137b572ed977e4478e0cb52e4b1'] = 'Není zadán klíč API Zásilkovna.';
 $_MODULE['<{packetery}prestashop>packetery_1657bdc235064b83d460f081ce90f598'] = 'Nelze přistoupit k API Zásilkovna se zadaným klíčem. Možná je klíč zadán špatně.';
 $_MODULE['<{packetery}prestashop>packetery_417a1696a121c02c563b0db9e5f975df'] = 'Je k dispozici nová verze modulu Zásilkovna pro PrestaShop.';
+$_MODULE['<{packetery}prestashop>packetery_ae5bcba5880983fe71d23b5facb1ca72'] = 'Používáte příliš starou verzi PHP, upgradujte prosím na verzi 5.6 nebo vyšší.';
+$_MODULE['<{packetery}prestashop>packetery_251139b9a981a048a62cb3efb63388ee'] = 'Modul Zásilkovna';
 $_MODULE['<{packetery}prestashop>packetery_0cc39f9a63392ad0ed1f9a14931938b6'] = 'Nastavení modulu';
 $_MODULE['<{packetery}prestashop>packetery_656a6828d7ef1bb791e42087c4b5ee6e'] = 'Klíč API';
 $_MODULE['<{packetery}prestashop>packetery_6ca3fca3e34e2f4aa426d7dc974f1b31'] = 'Označení odesílatele';
