@@ -1,5 +1,7 @@
 <?php
 
+// WARNING: there has to be the checkRequirements call at the beginning of each upgrade method
+
 if (!defined('_PS_VERSION_')) {
     exit;
 }
@@ -10,6 +12,10 @@ if (!defined('_PS_VERSION_')) {
  */
 function upgrade_module_2_0_6($object)
 {
+    if (!$object->checkRequirements()) {
+        return false;
+    }
+
     if (
         !$object->unregisterHook('orderDetailDisplayed') ||
         !$object->registerHook(['displayOrderDetail', 'displayOrderConfirmation', 'actionGetExtraMailTemplateVars'])
