@@ -9,3 +9,4 @@
         and possibility to change branch using widget
       - Updated: CSV export version upgraded to version 6
 2.0.6 - Added: information about chosen pickup point to order confirmation and e-mail
+      - Added: minimum required PHP version checking during install and upgrade
